--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,7 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: dist
+          path: dist
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
